--- a/css/main.css
+++ b/css/main.css
@@ -164,6 +164,10 @@ div.total{
     color:#fff;
 }
 
+div.total span{
+    float:right;
+}
+
 .footer {
     padding: 1em;
     background: #112222;
