--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,8 @@
 <div class="container main-frame" ng-init="init()">
-	<div>
-		MeilanTV is the best movie site you can imagine!
-	</div>
+	<div class="jumbotron">
+        <h1>Hello, there!</h1>
+        <p>
+        	This is simple AngularJS + RequireJS site, using trakt.tv movie api.
+        </p>
+      </div>
 </div>
