--- a/views/shop.html
+++ b/views/shop.html
@@ -1,6 +1,6 @@
 <div class="container main-frame" ng-init="init()">
 	<br />
-	<h1>DVDs Discount Pacakge <small>or modify your own package</small></h1>
+	<h1>DVDs Discount Package <small>or modify your own package</small></h1>
 	<hr>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
@@ -18,9 +18,6 @@
 			<div class="pull-right">
 				<button type="button" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-credit-card"></span> CHECK OUT NOW</button>
 			</div>
-
 		</div>
-
-		
 	</div>
 </div>
