--- a/views/header.html
+++ b/views/header.html
@@ -1,15 +1,15 @@
 <div class='banner'>
     <div class="visible-lg">
-        <a href="https://github.com/Meilan/meitv">
+        <a href="https://github.com/Meilan/meitv" target="_blank">
             <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
         </a>
     </div>
     <div class='container'>
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-6 visible-lg" >
                 <h1>Capgemini TV/Movie</h1>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6 pull-right">
                 <nav>
                     <ul class="nav nav-pills pull-right">
                         <li class="movies"><a href="#movies"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
