--- a/views/movies.html
+++ b/views/movies.html
@@ -27,7 +27,7 @@
         		<div class="row">
 
         			<div class="col-md-2">
-        			    <img src="{{value.images.poster}}" class="img-responsive" />
+        			    <img ng-src="{{value.images.poster}}" class="img-responsive" />
         				<div class="ratings">
         					<span class="label label-default"><span class="glyphicon glyphicon-thumbs-up"></span> {{value.ratings.loved}}</span>
         					<span class="label label-default"><span class="glyphicon glyphicon-thumbs-down"></span> {{value.ratings.hated}}</span>
