--- a/views/header.html
+++ b/views/header.html
@@ -7,7 +7,7 @@
     <div class='container'>
         <div class="row">
             <div class="col-xs-6 visible-lg" >
-                <h1>Capgemini TV/Movie</h1>
+                <h1>Mei TV/Movie</h1>
             </div>
             <div class="col-xs-6 pull-right">
                 <nav>
